--- a/immboots/css/immboost.css
+++ b/immboots/css/immboost.css
@@ -1211,12 +1211,48 @@ textarea, .textarea{
 .imm-number-picker > span{
 	font-size: 14px;
 	font-weight: bold;
-	position: relative;
 	display: block;
 	text-align: center;
 	display: none;
 	font-size: 12px;
 	color: #777;
+}
+.imm-number-pi{
+	height: 15px;
+	width: 100%;
+	text-align: center;
+	line-height: 1em;
+	display: block;
+}
+.imm-number-pick-n > i{
+	letter-spacing: -1px;
+	font-size: 12px;	
+}
+.imm-number-pick-n{
+	position: absolute;
+    width: 100%;
+    left: 0;
+    margin-top: -15px;
+	top:0;
+	left: 0;
+	transition: left 0.2s;
+	font-size: 12px;
+}
+.imm-number-pick-nb{
+	height: 105px;
+    position: absolute;
+    top: -34px;
+	width: 50px;
+	left: -8px;
+	overflow: hidden;
+	background-color:rgba(255,255,255,0.8);
+	/*-webkit-mask-image: -webkit-gradient(linear, left top, left bottom, 
+    from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));	*/
+
+	-moz-mask-image: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 10%, rgba(255,255,255,1) 50%, rgba(255,255,255,1) 90%, rgba(255,255,255,0) 100%);
+	-webkit-mask-image: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 10%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 90%,rgba(255,255,255,0) 100%);
+	mask-image: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 10%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 90%,rgba(255,255,255,0) 100%);
+	-ms-mask-image: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#00ffffff',GradientType=0 );
 }
 .imm-number{
 	font-size: 16px;
