--- a/immboots/css/immboost.css
+++ b/immboots/css/immboost.css
@@ -1381,6 +1381,76 @@ textarea, .textarea{
 
 
 
+
+/* WORKTIME */
+
+.imm-worktime-picker{
+
+	position: relative;
+	height: 200px;
+	box-shadow: 1px 2px 4px rgba(0,0,0,0.15);
+	width: 100%;
+	min-width: 250px;
+}
+.imm-worktime-middle{
+	position: absolute;
+	top: 0;
+	right: 20px;
+	left: 35px;
+	height: 100%;
+}
+.imm-worktime-left{
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 35px;
+	height: 100%;
+}
+.imm-worktime-day{
+	position: relative;
+	height: 14.2857%;
+	padding: 0 5px;
+}
+.imm-workt-day{
+    width: 100%;
+    height: 7px;
+    top: 50%;
+    margin-top: -3px;
+    border-radius: 0px;
+    position: absolute;
+    box-sizing: border-box;
+	background-color: #f1f1f1;
+}
+.imm-worktime-middle > div{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
+	padding: 10px 0;
+}
+.imm-workt-day > span{
+	position: absolute;
+	height: 100%;
+	background-color: #00c292;
+}
+.imm-worktime-container{
+	position: relative;
+}
+.imm-workt-button{
+	width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+	background-color:#f1f1f1;
+}
+
+
+
+
+
 /* RESPONSIVE TABLE */
 .responsive-table {
   width: 100%;
