--- a/immboots/css/immboost.css
+++ b/immboots/css/immboost.css
@@ -1435,6 +1435,44 @@ textarea, .textarea{
 	height: 100%;
 	background-color: #00c292;
 }
+.imm-workt-day > span > .imm-wt-mover{
+	position: absolute;
+    top: 8px;
+    height: 0;
+    width: 0;
+    padding: 0;
+    border-style: solid;
+    border-width: 0 5px 7px 5px;
+    border-color: transparent transparent #bfbfbf transparent;
+}
+.imm-wt-mover-left{
+	right: 100%;
+	margin-right: -5px;
+}
+.imm-wt-mover-input-left{
+	right: 100%;
+	margin-right: 5px;
+}
+.imm-wt-mover-right{
+	left: 100%;
+	margin-left: -5px;
+}
+.imm-wt-mover-input-right{
+	left: 100%;
+	margin-left: 5px;
+}
+.imm-workt-day > span > .imm-wt-mover-input{
+	position: absolute;
+    height: 20px;
+    width: 40px;
+    padding: 0;
+    font-size: 12px;
+    text-align: center;
+    top: -6px;
+    z-index: 3;
+    opacity: 0.75;
+}
+
 .imm-worktime-container{
 	position: relative;
 }
