--- a/immboots/css/immboost.css
+++ b/immboots/css/immboost.css
@@ -696,7 +696,12 @@ textarea, .textarea{
     font-size: 16px;
     z-index: 0;
     transition: top 0.27s, left 0.25s, font-size 0.27s;
-	font-family: "Open Sans"
+	font-family: "Open Sans";
+	white-space: nowrap;
+    overflow: hidden;
+    width: 100%;
+    box-sizing: border-box;
+    text-overflow: ellipsis;
 }
 
 .imm-select-base-block:focus label, .imm-select-base-block.items-selected label{
@@ -1409,7 +1414,6 @@ textarea, .textarea{
 .imm-worktime-day{
 	position: relative;
 	height: 14.2857%;
-	padding: 0 5px;
 }
 .imm-workt-day{
     width: 100%;
@@ -1420,20 +1424,34 @@ textarea, .textarea{
     position: absolute;
     box-sizing: border-box;
 	background-color: #f1f1f1;
+	z-index: 2;
 }
-.imm-worktime-middle > div{
+.imm-worktime-middle > .imm-worktime-mid-days{
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	box-sizing: border-box;
-	padding: 10px 0;
+	padding: 20px 0 10px;
 }
 .imm-workt-day > span{
 	position: absolute;
 	height: 100%;
 	background-color: #00c292;
+}
+.imm-worktime-mid-panel{
+	margin-left: -3.84615%;
+	margin-right: -3.84615%;
+	padding-top: 5px;
+}
+.imm-worktime-mid-panel > span{
+	width: 7.6923%;
+	font-size: 10px;
+	position: relative;
+	display: inline-block;
+	text-align: center;
+	color: #bdbdbd;
 }
 .imm-workt-day > span > .imm-wt-mover{
 	position: absolute;
@@ -1473,8 +1491,12 @@ textarea, .textarea{
     opacity: 0.75;
 }
 
+.imm-worktime-container.active{
+	z-index: 11;
+}
 .imm-worktime-container{
 	position: relative;
+	height: 50px;
 }
 .imm-workt-button{
 	width: 30px;
@@ -1482,10 +1504,106 @@ textarea, .textarea{
     position: absolute;
     top: 10px;
     right: 10px;
-	background-color:#f1f1f1;
+	cursor: pointer;
 }
-
-
+.imm-workt-button > i{
+	font-size: 34px;
+	color: #777;
+}
+.imm-workt-meter > span{
+	font-size: 12px;
+    width: 1px;
+    display: block;
+    text-align: center;
+    position: absolute;
+    background-color: #e3e3e3;
+    height: 100%;
+}
+.imm-workt-meter > .imm-wt-time-hover > b{
+	line-height: 0;
+    font-size: 12px;
+    top: 5px;
+    position: absolute;
+	color: #777;
+}
+.imm-workt-meter > .imm-wt-time-hover{
+	position: absolute;
+	z-index: 3;
+	height: 50%;
+	top: -3px;
+	width: 1px;
+	background-color: #777;
+	pointer-events: none;
+}
+.imm-workt-day > span:not(.active):hover::before, .imm-workt-day > span:not(.active):hover::after{
+	content: attr(data-s);
+    position: absolute;
+    bottom: 100%;
+    height: 10px;
+    width: 40px;
+    /* background-color: #777; */
+    font-size: 12px;
+    color: #777;
+    right: 100%;
+    text-align: right;
+    border-right: solid 1px #777;
+    line-height: 0.5em;
+    font-weight: bold;
+    font-style: italic;
+    padding-right: 2px;
+	pointer-events: none;
+}
+.imm-workt-day > span:not(.active):hover::after{
+	content: attr(data-e);
+	right: auto;
+	left: 100%;
+	text-align: left;
+	border-right: none;
+	border-left: solid 1px #777;
+}
+.imm-worktime-left{
+    padding: 20px 0 10px;
+    box-sizing: border-box;
+}
+.imm-worktime-left > span {
+    height: 14.2857%;
+    float: left;
+    font-size: 12px;
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+	color: #777;
+	line-height: 2em;
+}
+.imm-worktime-right{
+	right: 0;
+    top: 0;
+    position: absolute;
+    width: 20px;
+    height: 100%;
+    box-sizing: border-box;
+    padding: 20px 0 10px;
+}
+.imm-worktime-right > span::before{
+	content: "\f00d";
+	font-family: FontAwesome;
+}
+.imm-worktime-right > span{
+    height: 14.2857%;
+    float: right;
+    font-size: 12px;
+    width: 80%;
+    text-align: center;
+    font-weight: bold;
+    color: #dadada;
+    line-height: 2em;
+	cursor: pointer;
+	box-sizing: border-box;
+    padding-right: 2px;
+}
+.imm-worktime-right > span:hover{
+	color: #777;
+}
 
 
 
